[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/background/scene.jpg" type="Texture" id=1]
[ext_resource path="res://assets/background/scene.png" type="Texture" id=2]
[ext_resource path="res://assets/effects/effects.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/charactors/cultist/cultist.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/charactors/silent/silent.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/bar.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/hp_player.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/energy.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/ui/hp_enemy.png" type="Texture" id=9]
[ext_resource path="res://assets/font/bb4171.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/ui/round.png" type="Texture" id=11]
[ext_resource path="res://assets/font/SourceHanSerifSC-Bold.otf" type="DynamicFontData" id=12]
[ext_resource path="res://player_energy.gd" type="Script" id=13]
[ext_resource path="res://opposite_energy.gd" type="Script" id=14]
[ext_resource path="res://main.gd" type="Script" id=15]
[ext_resource path="res://player_name.gd" type="Script" id=16]
[ext_resource path="res://opposite_name.gd" type="Script" id=17]
[ext_resource path="res://round.gd" type="Script" id=18]
[ext_resource path="res://assets/ui/hp_player.gd" type="Script" id=19]
[ext_resource path="res://assets/ui/hp_opposite.gd" type="Script" id=20]
[ext_resource path="res://sdk.gd" type="Script" id=21]
[ext_resource path="res://custom.gd" type="Script" id=22]
[ext_resource path="res://special.gd" type="Script" id=23]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 8.15489 )

[node name="controller" type="Node2D"]
script = ExtResource( 15 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 614.61, 585.53 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="top" type="Sprite" parent="background"]
position = Vector2( -65.9366, -646.287 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 500, 1920, 771 )

[node name="opposite" parent="background" instance=ExtResource( 4 )]
position = Vector2( 359.647, -342.279 )
scale = Vector2( 1.6, 1.6 )

[node name="effects" parent="background/opposite" instance=ExtResource( 3 )]

[node name="player" parent="background" instance=ExtResource( 5 )]
position = Vector2( -468.716, -300.564 )
scale = Vector2( 1.6, 1.6 )

[node name="effects" parent="background/player" instance=ExtResource( 3 )]

[node name="panel" type="Sprite" parent="."]
position = Vector2( 574.072, 37.1424 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="player_energy" type="GridContainer" parent="panel"]
margin_left = -898.019
margin_top = 21.0675
margin_right = 651.981
margin_bottom = 149.068
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/hseparation = 30
columns = 10
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="point_1" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_right = 128.0
margin_bottom = 128.0

[node name="point_2" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_left = 158.0
margin_right = 286.0
margin_bottom = 128.0

[node name="point_3" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_left = 316.0
margin_right = 444.0
margin_bottom = 128.0

[node name="point_4" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_left = 474.0
margin_right = 602.0
margin_bottom = 128.0

[node name="point_5" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_left = 632.0
margin_right = 760.0
margin_bottom = 128.0

[node name="point_6" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_left = 790.0
margin_right = 918.0
margin_bottom = 128.0

[node name="point_7" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_left = 948.0
margin_right = 1076.0
margin_bottom = 128.0

[node name="point_8" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_left = 1106.0
margin_right = 1234.0
margin_bottom = 128.0

[node name="point_9" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_left = 1264.0
margin_right = 1392.0
margin_bottom = 128.0

[node name="point_10" parent="panel/player_energy" instance=ExtResource( 8 )]
margin_left = 1422.0
margin_right = 1550.0
margin_bottom = 128.0

[node name="opposite_energy" type="GridContainer" parent="panel"]
margin_left = 120.316
margin_top = 20.9911
margin_right = 1670.32
margin_bottom = 148.991
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/hseparation = 30
columns = 10
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="point_10" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_right = 128.0
margin_bottom = 128.0

[node name="point_9" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_left = 158.0
margin_right = 286.0
margin_bottom = 128.0

[node name="point_8" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_left = 316.0
margin_right = 444.0
margin_bottom = 128.0

[node name="point_7" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_left = 474.0
margin_right = 602.0
margin_bottom = 128.0

[node name="point_6" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_left = 632.0
margin_right = 760.0
margin_bottom = 128.0

[node name="point_5" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_left = 790.0
margin_right = 918.0
margin_bottom = 128.0

[node name="point_4" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_left = 948.0
margin_right = 1076.0
margin_bottom = 128.0

[node name="point_3" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_left = 1106.0
margin_right = 1234.0
margin_bottom = 128.0

[node name="point_2" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_left = 1264.0
margin_right = 1392.0
margin_bottom = 128.0

[node name="point_1" parent="panel/opposite_energy" instance=ExtResource( 8 )]
margin_left = 1422.0
margin_right = 1550.0
margin_bottom = 128.0

[node name="player_name" type="Label" parent="panel"]
margin_left = -925.893
margin_top = -58.5118
margin_right = -572.893
margin_bottom = 1.48817
custom_fonts/font = SubResource( 1 )
text = "Vimchain"
valign = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_hp" type="Sprite" parent="panel"]
self_modulate = Color( 0.447059, 0.580392, 0.615686, 0.705882 )
position = Vector2( -585.856, 279.533 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 46, 20, 558, 96 )
__meta__ = {
"_editor_description_": ""
}

[node name="hp_bar" type="Sprite" parent="panel/player_hp"]
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 46, 20, 558, 96 )
script = ExtResource( 19 )

[node name="hp" type="Label" parent="panel/player_hp/hp_bar"]
anchor_left = -0.00163767
anchor_top = 0.184892
anchor_right = -0.00163767
anchor_bottom = 0.184893
margin_left = 14.7896
margin_top = 0.407433
margin_right = 84.7896
margin_bottom = 61.4074
custom_fonts/font = SubResource( 2 )
text = "30"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="opposite_hp" type="Sprite" parent="panel"]
self_modulate = Color( 0.447059, 0.580392, 0.615686, 0.705882 )
position = Vector2( 217.556, 270.566 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 19, 18, 558, 96 )
__meta__ = {
"_editor_description_": ""
}

[node name="hp_bar" type="Sprite" parent="panel/opposite_hp"]
position = Vector2( -5.1947, 0 )
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 19, 18, 558, 96 )
script = ExtResource( 20 )

[node name="hp" type="Label" parent="panel/opposite_hp/hp_bar"]
margin_left = 479.684
margin_top = 20.2031
margin_right = 549.684
margin_bottom = 81.2031
custom_fonts/font = SubResource( 3 )
text = "30"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opposite_name" type="Label" parent="panel"]
margin_left = 535.785
margin_top = -57.7504
margin_right = 923.785
margin_bottom = 2.24958
custom_fonts/font = SubResource( 1 )
text = "Ashuralyk"
align = 2
valign = 1
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round_icon" type="Sprite" parent="panel"]
position = Vector2( -0.00366211, 28.3058 )
rotation = -3.13805
scale = Vector2( 0.909091, 0.909091 )
texture = ExtResource( 11 )

[node name="round" type="Label" parent="panel"]
margin_left = -24.8287
margin_top = -11.7151
margin_right = 41.1713
margin_bottom = 76.2849
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="panel"]

[node name="cards" type="Node2D" parent="."]
position = Vector2( 614.61, 585.53 )
scale = Vector2( 0.6, 0.6 )

[node name="special" type="Node2D" parent="cards"]
position = Vector2( -837.803, 138.593 )
script = ExtResource( 23 )

[node name="custom" type="Node2D" parent="cards"]
position = Vector2( -494.441, 138.593 )
script = ExtResource( 22 )

[node name="born_point" type="Node2D" parent="cards/custom"]
position = Vector2( -659.762, -506.413 )
scale = Vector2( 1.66667, 1.66667 )

[node name="anchor" type="Node2D" parent="cards/custom"]

[node name="Tween" type="Tween" parent="cards"]

[node name="sdk" type="Area2D" parent="."]
monitoring = false
script = ExtResource( 21 )

[node name="spell_panel" type="CollisionShape2D" parent="sdk"]
position = Vector2( 578.822, 203.491 )
scale = Vector2( 34.646, 11.1531 )
shape = SubResource( 5 )

[connection signal="game_round" from="." to="panel/round" method="_on_kabletop_game_round"]
[connection signal="opposite_energy" from="." to="panel/opposite_energy" method="_on_kabletop_opposite_energy"]
[connection signal="opposite_hp" from="." to="panel/opposite_hp/hp_bar" method="_on_controller_opposite_hp"]
[connection signal="opposite_name" from="." to="panel/opposite_name" method="_on_kabletop_opposite_name"]
[connection signal="player_energy" from="." to="panel/player_energy" method="_on_kabletop_player_energy"]
[connection signal="player_hp" from="." to="panel/player_hp/hp_bar" method="_on_controller_player_hp"]
[connection signal="player_name" from="." to="panel/player_name" method="_on_kabletop_player_name"]
[connection signal="input_event" from="sdk" to="sdk" method="_on_sdk_input_event"]
